fix: verify token middleware & swagger update
